--- a/Intelligent-comment/package.json
+++ b/Intelligent-comment/package.json
@@ -7,12 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "iview": "^3.1.1-rc.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "iview": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.0.3",
