--- a/Intelligent-comment/package.json
+++ b/Intelligent-comment/package.json
@@ -7,12 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "axios": "^0.18.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "iview": "^3.1.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "iview": "^3.1.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.0.3",
