--- a/Intelligent-comment/package.json
+++ b/Intelligent-comment/package.json
@@ -13,9 +13,11 @@
     "iview": "^3.1.3",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
+    "qs": "^6.5.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
+    "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
